<resources>
    <string name="app_name">TeamTrack</string>

    <string name="mapbox_access_token">pk.eyJ1Ijoia3Vkcnlhc2VyZ2UiLCJhIjoiY2p6dGlldGdkMDU4ZDNocXBvand0bTI1dSJ9.lPv9YBigYg3i9d_R9v4Gkw</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logIn">Log In</string>
    <string name="sendCode">send code</string>
    <string name="signIn">sign in</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">unknown error</string>
    <string name="sign_out">Sign out</string>
    <string name="close_app">Close</string>
    <string name="hint_text">phone number</string>
    <string name="phone_number_text">phone number (+1 ...)</string>
    <string name="sms_code_text">sms code</string>
    <string name="input_different_number">Input different phone number or try again</string>
    <string name="sign_in">Sign in</string>
    <string name="with_your_phone_number">with your phone number</string>
    <string name="nickName">Nick name</string>
    <string name="change_nick_name">Change nick name</string>
    <string name="please_enter_your_nick_name">Please enter your nickname.</string>
    <string name="save">Save</string>
    <string name="observables">Observable users</string>
    <string name="observers">Supervisors</string>
    <string name="please_make_your_choice">Make your choice please</string>
    <string name="wants_to">wants to watch your location</string>
    <string name="decline">Decline</string>
    <string name="user_location_permission_explanation">user_location_permission_explanation</string>
    <string name="user_location_permission_not_granted"/>
    <string name="new_location">new_location</string>
    <string name="id">ID</string>
    <string name="my_followers">My followers</string>
    <string name="join_a_group">Join a group</string>
    <string name="join_a_master">Join a master user</string>
    <string name="join_the_foreman">Join the foreman</string>
    <string name="master_id">MasterId</string>
    <string name="my_foremans_group">My foreman\'s group</string>
    <string name="or_yuo_can_treate_your_own_group">Or you can create your own group</string>
    <string name="create_my_own_group">Create my own group</string>
    <string name="join">Join</string>
    <string name="my_own_group_id">My own group Id:</string>
    <string name="my_own_group_id_sharing">Sharing my own group id</string>
    <string name="enter_your_foreman_id">Enter your foreman ID</string>
    <string name="joining_the_foreman_s_group">Joining the foreman\'s group</string>
    <string name="share_my_group">Share my group</string>
    <string name="my_team">My team</string>
    <string name="close_my_own_group">Close my own group</string>
    <string name="leave_the_foreman">Leave the foreman</string>
    <string name="my_own_group_members">My own group members</string>
    <string name="foreman_s_group">Foreman\'s group</string>
</resources>